# chordcraft

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SHAREABLE_URLS_IMPLEMENTATION.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: generation_bench.rs
crates/core/src/: analyzer.rs  chord.rs  fingering.rs  generator.rs  instrument.rs  interval.rs  lib.rs  note.rs  progression.rs  shapes.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
web/: .env  .gitignore  .prettierrc  README.md  TESTING.md  TESTING_NOTES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.svelte  App.test.ts  app.css  app.html
web/src/lib/: ChordDiagram.svelte  ChordDiagram.test.ts  DarkModeToggle.svelte  wasm.ts
web/src/lib/components/features/find/: AdvancedOptions.svelte  Input.svelte  Results.svelte
web/src/lib/components/features/name/: FingerCountBadge.svelte  Form.svelte  Input.svelte  InteractiveChordDiagram.svelte  Results.svelte
web/src/lib/components/features/progression/: AdvancedOptions.svelte  Input.svelte  Results.svelte
web/src/lib/components/seo/: StructuredData.svelte
web/src/lib/components/shared/: AdvancedOptionsWrapper.svelte  ClearButton.svelte  ErrorAlert.svelte  ExampleButtons.svelte  FingeringCard.svelte  Footer.svelte  Header.svelte  InstallButton.svelte  InstrumentSelector.svelte  Navigation.svelte  ShareButton.svelte
web/src/lib/components/ui/button/: button.svelte
web/src/lib/components/ui/input/: input.svelte
web/src/lib/components/ui/input-group/: input-group-addon.svelte
web/src/lib/components/ui/popover/: popover-content.svelte
web/src/lib/components/ui/select/: select-content.svelte  select-item.svelte
web/src/lib/stores/: find.ts  name.ts  progression.ts
web/src/lib/utils/: examples.ts  fretboard-constants.ts  tab-notation.test.ts  tab-notation.ts  url-state.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
web/src/routes/find/: +page.svelte
web/src/routes/name/: +page.svelte
web/src/routes/progression/: +page.svelte
web/src/test/: setup.ts
web/src/test/mocks/$app/: environment.ts  forms.ts  navigation.ts  paths.ts  state.ts  stores.ts
web/src/tests/components/: FingerCountBadge.test.ts  InstrumentSelector.test.ts  InteractiveChordDiagram-sync.test.ts  InteractiveChordDiagram.test.ts
web/src/tests/components/name/: Form.test.ts  FormTestWrapper.svelte
web/src/tests/routes/find/: +page.test.ts  url-sync.test.ts
web/src/tests/routes/name/: +page.test.ts  url-sync.test.ts
web/src/tests/routes/progression/: +page.test.ts  url-sync.test.ts
web/src/tests/utils/: url-state.test.ts
web/static/: _headers  _redirects  llms.txt  manifest.webmanifest  robots.txt  sitemap.xml
web/static/fonts/: fonts.css
