[package]
name = "chordcraft-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for ChordCraft music theory library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core library with serde support
chordcraft-core = { path = "../core", features = ["serde"] }

# WASM bindings
wasm-bindgen = "0.2"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"

# Better error messages in browser console
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
# Enable modern WASM features
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals"]

[profile.release]
# Optimize for small code size (critical for web)
opt-level = "z"
lto = true
codegen-units = 1
# Note: We don't strip debug info by default for better debugging
# Add strip = true when deploying to production
